--- a/inst/textcompare.css
+++ b/inst/textcompare.css
@@ -1,21 +1,34 @@
 .line {
+  padding-left: 5px;
   display: inline-block;
-  width: 95%;
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px;
+  width: calc(100% - 100px);
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  line-height: 1.6;
 }
 .linenumber {
-  padding-right: 1%;
-  text-align: right;
-  width: 5%;
+  padding-right: 5px;
+  text-align: center;
+  vertical-align: top;
+  width: 50px;
   border-radius: 0;
-  border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
   opacity: 0.6;
 }
 .file_already_selected {
   font-style: italic;
 }
+#comparison pre {
+  font-family: "Lucida Console", Monaco, monospace !important;
+}
 #comparison {
-  font-family: "Lucida Console", Monaco, monospace;
+  margin-bottom: 100px;
+}
+pre {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  background: 0;
+  font-size: inherit;
 }
